# CWVIG_OSD

./: .editorconfig  .gitignore  AGENTS.md  PROGRESS.md  README.md  pyproject.toml
benchmark/: README.md
benchmark/flyki_overlap/: Benchmarks.h  CBOCC.cpp  CBOG_CBD.cpp  CMakeLists.txt  cmaes_dependency_check.cpp  weight1.txt  weight2.txt  weight3.txt  weight4.txt  weight5.txt
benchmark/flyki_overlap/cmake/: report_missing_cmaes.cmake
benchmark/flyki_overlap/grouping/: CBOCCCommandLine.cpp  CBOCCCommandLine.h  CBOCCCommandLineTests.cpp  CBOCCGroupingLoader.cpp  CBOCCGroupingLoader.h  CBOCCGroupingLoaderTests.cpp  CWVIGGroupingPipeline.cpp  CWVIGGroupingPipeline.h  CWVIGGroupingPipelineTests.cpp  GroupingCoverageAudit.cpp  GroupingCoverageAudit.h  GroupingCoverageTests.cpp  GroupingData.cpp  GroupingData.h  GroupingIO.cpp  GroupingIO.h  GroupingMetrics.cpp  GroupingMetrics.h  GroupingMetricsTests.cpp  GroupingProviderTests.cpp  GroupingSourceTests.cpp  HardOverlapCompatibilityAudit.cpp  HardOverlapCompatibilityAudit.h  HardOverlapCompatibilityTests.cpp  LegacyGroupingAdapter.cpp  LegacyGroupingAdapter.h  SoftOverlapCalibration.cpp  SoftOverlapCalibration.h  SoftOverlapCalibrationTests.cpp  SoftOverlapDecomposition.cpp  SoftOverlapDecomposition.h  SoftOverlapDecompositionTests.cpp  SoftOverlapPruningTests.cpp  WeightedInteractionGraph.cpp  WeightedInteractionGraph.h  cbocco_grouping_loader_cli.cpp  cwvig_grouping_pipeline_cli.cpp  grouping_coverage_cli.cpp  grouping_metrics_cli.cpp  grouping_provider_cli.cpp  (+5 more)
benchmark/flyki_overlap/probe/: BenchmarkEvaluator.cpp  BenchmarkEvaluator.h  CWVIGEdgeData.cpp  CWVIGEdgeData.h  CWVIGEdgeEvalTests.cpp  CWVIGEdgeMetrics.cpp  CWVIGEdgeMetrics.h  CWVIGEstimator.cpp  CWVIGEstimator.h  CWVIGEstimatorTests.cpp  FiniteDifferenceProbe.cpp  FiniteDifferenceProbe.h  InteractionGroundTruth.cpp  InteractionGroundTruth.h  ProbeHarnessTests.cpp  SyntheticFunctions.cpp  SyntheticFunctions.h  cwvig_edge_eval_cli.cpp  cwvig_estimator_cli.cpp  probe_smoke_cli.cpp
cc/: cbcco_adapter.cpp  soft_cc_update.cpp
configs/cwvig_presets/: balanced_ablation.json  capped_default.json  conservative_ablation.json
docs/: build_audit.md  cbocco_budget_audit.md  cbocco_coverage_scaling_smoke.md  cbocco_explicit_grouping.md  cbocco_grouping_loader.md  cbocco_grouping_smoke_comparison.md  cbocco_multiseed_smoke_comparison.md  cbocco_sanitized_multiseed_comparison.md  cmaes_dependency.md  cwvig_edge_evaluation.md  cwvig_estimator.md  cwvig_grouping_pipeline.md  default_preset_selection.md  grouping_batch_experiments.md  grouping_batch_medium.md  grouping_coverage_audit.md  grouping_metrics.md  grouping_provider.md  grouping_sources.md  hard_overlap_compatibility.md  probe_harness.md  reproducibility.md  scaffold_notes.md  soft_overlap_calibration.md  soft_overlap_decomposition.md  soft_overlap_pruning.md
experiments/: analyze_cbocco_coverage_scaling.py  analyze_cbocco_multiseed.py  analyze_grouping_batch.py  audit_cbocco_budget.py  check_reproducibility.py  grouping_accuracy.py  optimization_test.cpp  parse_cbocco_results.py  run_grouping_batch.py  statistical_test.py
grouping/: __init__.py  bridge_validation.py  prob_dg.py  soft_overlap.py  weighted_vig.py
results/: reproducibility_manifest.md
results/grouping_batch/: default_preset_selection.md  preset_summary.csv  summary.csv
results/grouping_batch_medium/: batch_plan.txt  by_context_preset.csv  by_dimension_preset.csv  by_seed_preset.csv  default_preset_selection.md  preset_summary.csv  summary.csv
results/repro_smoke/: batch_plan.txt  by_context_preset.csv  by_dimension_preset.csv  by_seed_preset.csv  default_preset_selection.md  preset_summary.csv  summary.csv
scripts/: run_cbocco_budget_audit.ps1  run_cbocco_coverage_scaling_smoke.ps1  run_cbocco_grouping_smoke_compare.ps1  run_cbocco_multiseed_sanitized_compare.ps1  run_cbocco_multiseed_smoke_compare.ps1  run_grouping_medium.ps1  run_grouping_smoke.ps1  run_grouping_smoke.sh  run_hard_overlap_sanitizer_smoke.ps1  write_reproducibility_manifest.py
tests/: test_analyze_cbocco_coverage_scaling.py  test_analyze_cbocco_multiseed.py  test_audit_cbocco_budget.py  test_grouping_pipeline.py  test_parse_cbocco_results.py
